# haskell-todo

./: .envrc  .gitignore  default.nix  flake.nix  npins.nix  shell.nix  todo.cabal
app/: Main.hs
lib/Todos/: Cli.hs  TodoList.hs
nix/: package.nix  shell.nix
npins/: sources.json
